--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                     <div class="bg-blue-100 col-span-2">
-                        <div class="relative flex flex-col hidden h-full bg-white border-r border-gray-300 shadow-xl md:block transform transition-all duration-500 ease-in-out">
+                        <div class="relative flex flex-col hidden h-full bg-white border-r border-gray-300 shadow-md md:block transform transition-all duration-500 ease-in-out">
                             <div class="flex flex-row items-center px-5 pt-3">
 
                                 <div class="flex flex-row items-center bg-orange-200 rounded-md p-2">
