--- a/public/index.html
+++ b/public/index.html
@@ -599,11 +599,12 @@
                             </div>
                             <div class="top-0 bottom-0 left-0 right-0 flex flex-col flex-1 overflow-hidden bg-transparent bg-bottom bg-cover">
                                 <div class="self-center flex-1 w-full">
-                                    <div class="flex flex-col px-3 py-1 m-auto overflow-auto" style="height: 520px" id="scrollArea">
+                                    <div class="flex flex-col px-3 py-1 m-auto overflow-auto items-start" style="height: 520px" id="scrollArea">
                                         <div class="absolute z-50 bottom-0 right-0 mb-3 mr-3 p-2 border-gray-100 border-2 rounded-full bg-white transform transition duration-200">
 
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18"><path class="heroicon-ui" d="M11 18.59V3a1 1 0 0 1 2 0v15.59l5.3-5.3a1 1 0 0 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 1.4-1.42l5.3 5.3z"/></svg>
                                         </div>
+                                        <div id="date" class="sticky top-0 z-20 self-center px-2 py-1 mx-0 my-1 text-sm text-white text-gray-700 bg-gray-300 border border-gray-300 rounded-full shadow rounded-tg">April 30</div>
                                         <div class="self-end w-3/4 my-2">
                                             <div class="relative p-4 text-sm bg-white rounded-t-lg rounded-r-lg shadow">
 
@@ -632,7 +633,7 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" class="fill-current"><path class="heroicon-ui" d="M13.04 14.69l1.07-2.14a1 1 0 0 1 1.2-.5l6 2A1 1 0 0 1 22 15v5a2 2 0 0 1-2 2h-2A16 16 0 0 1 2 6V4c0-1.1.9-2 2-2h5a1 1 0 0 1 .95.68l2 6a1 1 0 0 1-.5 1.21L9.3 10.96a10.05 10.05 0 0 0 3.73 3.73zM8.28 4H4v2a14 14 0 0 0 14 14h2v-4.28l-4.5-1.5-1.12 2.26a1 1 0 0 1-1.3.46 12.04 12.04 0 0 1-6.02-6.01 1 1 0 0 1 .46-1.3l2.26-1.14L8.28 4zm12.01-1.7a1 1 0 0 1 1.42 1.4L17.4 8H20a1 1 0 0 1 0 2h-5a1 1 0 0 1-1-1V4a1 1 0 0 1 2 0v2.59l4.3-4.3z"/></svg>
                                             <span class="ml-1">Call received from +447535618782</span><span class="ml-2 text-xs font-medium text-gray-600 align-self-end">12.52</span>
                                         </div>
-                                        <div class="self-center px-2 py-1 mx-0 my-1 text-sm text-white text-gray-700 bg-gray-300 border border-gray-300 rounded-full shadow rounded-tg">May 6</div>
+                                        <div class="self-center px-2 py-1 mx-0 my-1 text-sm text-white text-gray-700 bg-gray-300 border border-gray-300 rounded-full shadow rounded-tg" data-date>May 6</div>
                                         <div class="self-start w-3/4 my-2">
                                             <div class="relative p-4 text-sm bg-white rounded-t-lg rounded-r-lg shadow">
                                                 Don't forget to check on all responsive sizes.
@@ -670,7 +671,7 @@
 
                                             <span class="ml-2 text-xs font-medium text-gray-600">19.24</span>
                                         </div>
-                                        <div class="self-center px-2 py-1 mx-0 my-1 text-sm text-white text-gray-700 bg-gray-300 border border-gray-300 rounded-full shadow rounded-tg">May 9</div>
+                                        <div class="self-center px-2 py-1 mx-0 my-1 text-sm text-white text-gray-700 bg-gray-300 border border-gray-300 rounded-full shadow rounded-tg" data-date>May 9</div>
                                        <div class="self-end w-3/4 my-2">
                                         <div class="relative p-4 text-sm bg-yellow-300 rounded-t-lg rounded-l-lg shadow">
                                             Still waiting for flow
@@ -727,7 +728,6 @@
             // Set things up
             window.addEventListener("load", (event) => {
                 const root = document.querySelector('#scrollArea > *:last-child')
-                console.log('root: ', root)
                 let options = {
                     root,
                     rootMargin: '400px',
@@ -736,7 +736,6 @@
 
                 const intersectionCallback = (entries) => {
                     entries.forEach(entry => {
-                        console.log('entry: ', entry)
                         if (entry.intersectionRatio == 0) {
                         document.querySelector('#scrollArea > *:first-child').classList.remove('scale-0')
                         document.querySelector('#scrollArea > *:first-child').classList.add('scale-100')
@@ -748,6 +747,33 @@
                 }
                 let observer = new IntersectionObserver(intersectionCallback);
                 observer.observe(root)
+            }, false);
+
+
+            window.addEventListener("load", (event) => {
+                const root = document.querySelector('#scrollArea')
+                const $date = document.querySelector('#date')
+                console.log('root: ', root)
+                let options = {
+                    root: root,
+                    rootMargin: '0px',
+                    threshold: 1.0
+                }
+
+                const intersectionCallback = (entries) => {
+                    entries.forEach(entry => {
+                        console.log(entry.target)
+                        console.log(entry.intersectionRect.bottom)
+                        if (entry.intersectionRect.bottom > $date.getBoundingClientRect().bottom) {
+                            console.log('ratio bigger than 0:', entry.target.textContent)
+                            $date.innerHTML = entry.target.textContent
+                        }
+                    });
+                }
+                let observer = new IntersectionObserver(intersectionCallback, options);
+                document.querySelectorAll('[data-date]').forEach((node) => {
+                    observer.observe(node)
+                })
             }, false);
 
         })()
