--- a/public/index.html
+++ b/public/index.html
@@ -615,15 +615,17 @@
                                             </div>
                                         </div>
                                         <div class="self-start w-3/4 my-2">
-                                            <div class="relative p-4 text-sm bg-white rounded-t-lg rounded-r-lg shadow">
+                                            <div class="relative p-4 pb-6 text-sm bg-white rounded-t-lg rounded-r-lg shadow">
                                                 Here's my meter readings
 
+                                                <small class="absolute bottom-0 left-0 ml-4 mb-1 text-gray-600">Sent from karen@email.com</small>
                                                 <span class="absolute bottom-0 right-0  mr-1 mb-1 text-xs font-medium text-gray-600">12.52</span>
                                             </div>
                                         </div>
                                         <div class="self-start w-3/4 my-2">
-                                            <div class="relative p-4 text-sm bg-white rounded-t-lg rounded-r-lg shadow">
+                                            <div class="relative p-4 pb-6 text-sm bg-white rounded-t-lg rounded-r-lg shadow">
                                                 Here's my meter another readings
+                                                <small class="absolute bottom-0 left-0 ml-4 mb-1 text-gray-600">Sent from karen@email.com</small>
                                                 <span class="absolute bottom-0 right-0  mr-1 mb-1 text-xs font-medium text-gray-600">12.54</span>
                                             </div>
                                         </div>
